<resources>
    <string name="app_name">Phenlinea.info Dialer</string>
    <string name="todo">TODO</string>
    <string name="codigo_unidad">CODIGO DE LA UNIDAD</string>
    <string name="guardar">Guardar</string>
    <string name="searching">SEARCHING…</string>
    <string name="timer_init">00:00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_0">0</string>
    <string name="llamar">LLAMAR</string>
    <string name="speaker">ALTAVOZ</string>
    <string name="nombre_base_de_datos">NOMBRE BASE DE DATOS</string>
</resources>
