<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:src="@drawable/ph_en_linea_header_trans" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:imeOptions="actionGo"
        android:inputType="phone" />

    <LinearLayout
        android:id="@+id/keys_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberInput"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/x"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/btn_erase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="3"
                android:background="@null"
                android:backgroundTint="@null"
                android:src="@drawable/ic_back"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="@null"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:backgroundTint="@null"
            android:text="@string/llamar"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>