<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/ph_en_linea_header_trans" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_txt_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_container"
        android:layout_marginHorizontal="25dp"
        android:text="Nombre BD"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_txt_bd"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/nombre_base_de_datos"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/btn_set_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_db"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/guardar" />

</RelativeLayout>