<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/ph_en_linea_header_trans"
        android:background="@color/blue_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_container"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/call_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/searching"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/call_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/gray_light"
            android:textSize="12sp" />

        <Chronometer
            android:id="@+id/call_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/call_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <RelativeLayout
            android:id="@+id/speaker_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:paddingHorizontal="8dp"
            android:paddingVertical="13dp">

            <ImageView
                android:id="@+id/btn_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_speaker"
                android:contentDescription="@string/todo"
                android:gravity="center"
                android:padding="25dp"
                android:src="@drawable/ic_speaker_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_speaker"
                android:layout_centerInParent="true"
                android:text="@string/speaker"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_answer"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="25dp"
            android:src="@drawable/ic_answer"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_hangup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_hangup" />

        <ImageView
            android:id="@+id/btn_hangup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_hangup"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="25dp"
            android:src="@drawable/ic_hangup"
            app:layout_constraintEnd_toStartOf="@+id/btn_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>